Fix theming and always-visible scrollbars

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,6 @@
 html {
     height: 100%;
     overflow: hidden;
-    background-color: var(--cpd-color-bg-canvas-default);
-    color: var(--cpd-color-text-primary);
 }
 
 body {
@@ -20,6 +18,8 @@ body {
     flex-direction: column;
     width: 100%;
     height: 100%;
+    background-color: var(--cpd-color-bg-canvas-default);
+    color: var(--cpd-color-text-primary);
 }
 
 /* room for the tauri window header */
@@ -127,7 +127,7 @@ body {
 .mx_Timeline {
     /* important to stop the header pushing the composer off the bottom */
     flex: 1 1 0;
-    overflow: scroll;
+    overflow: auto;
     position: relative;
     display: flex;
 }
